# Kainatos-packages

./: README.md  nvidia-version
.github/workflows/: blank.yml  build-deb-and-push-apt  build-deb-and-push-apt.yml  build-deb.yml
debs/: Kainat-os-disk-manager.deb  Kainatos-Appstream-data.deb  calamares-settings-kainatos.deb  kainat-base-files.deb  kainat-desktop.deb  kainat-os-core.deb  kainat-os-sources.deb  kainatos-appimage-installer.deb  kainatos-appimage-manager.deb  kexe-tools.deb  nvidia-driver-kainatos.deb
debs/Kainat-kde-settings_1.0.01_all/DEBIAN/: control
scripts/: kos-prepare  make-source-nvidia-driver
scripts/kio-my-disk.sh/: CMakeLists.txt  kio_mydisks.cpp  mydisks.json
scripts/protonup-qt/: appimg-to-deb.sh  download-protonup-qt.sh
sources/K-settings/DEBIAN/: control
sources/Kainat-kde-settings/DEBIAN/: control
sources/Kainat-kde-settings_1.0.01_all/DEBIAN/: control  md5sums
sources/Kainat-kde-settings_25.01.01_all/DEBIAN/: control
sources/Kainat-kde-settings_25.01.02_all/DEBIAN/: control
sources/Kainat-kde-settings_25.01.03_all/DEBIAN/: conffiles  control
sources/Kainat-kde-settings_25.01.04_all/DEBIAN/: control
sources/Kainat-os-disk-manager/DEBIAN/: control  postinst
sources/Kainatos-Appstream-data/DEBIAN/: control  postinst
sources/Live-boot-kainatos/DEBIAN/: control  postrm  preinst
sources/Live-boot-kainatos/etc/: hosts
sources/calamares-settings-kainatos/DEBIAN/: control  postrm  preinst
sources/calamares-settings-kainatos_13.0.01_all/DEBIAN/: conffiles  control
sources/kainat-base-files/DEBIAN/: control
(+177 files in other folders)
